themes/finna2/less/finna/holdings.less
/* --  Holdings styling  -- */

// Common settings
.holding-details {
    margin-top: 10px;
    @media (max-width: @screen-xxs) {
        width: 100%;
    }
}
.dedup-select {
    max-width: 100%;
}
.groupLocation {
    letter-spacing: 0.2px;
    padding: 0;
    padding-bottom: 2px;
    & i {
        vertical-align: middle;
        margin-top: -2px;
    }
    & span.text-error {
        vertical-align: middle;
        margin-right: 10px;
    }
    & span.text-success {
        color: inherit;
        vertical-align: middle;
        margin-right: 10px;
    }
    .text-error {
        color: @state-danger-text;
    }
}
.no-branches .groupLocation {
    display: inline-block;
    line-height: 1.6em;
}
.groupCallnumber {
    color: @gray-light;
    display: inline;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    margin-left: 15px;
}
.branchInfo {
    padding-bottom: 2px;
}

.ils-purchase-history {
    padding: 8px 15px;
    @media(min-width: @screen-sm) {
        .title {
            width: 33.333%;
            float:left;
        }
        .history {
            width: 66.666%;
            float: left;
        }
    }
}

// Result list
.record-container .holding-details {
    clear: both;
    & .available-total {
        float: left;
        margin-left: 0px;
    }
    & .dedupInformation {
        float: left;
        margin-right: 10px;
        max-width: 100%;
    }
    & .holdings, .holdings-container, .no-holdings, .availability-load-indicator {
        clear: both;
    }
    &.deduplicated {
        & .available-total {
            margin-top: 0.5em;
        }
    }
    .form-control {
        width: 100%;
    }
}


// Record view holdings styles
.holdings-tab {
    & .library_card, .placehold.btn, .placeStorageRetrievalRequest.btn, .placeILLRequest.btn {
        margin-bottom: 5px;
        margin-left: 5px;
    }
    & .placehold.btn {
        white-space: normal;
        height: auto;
    }
    & .place-hold-wrapper {
        & p {
            margin-top: 5px;
        }
        a {
            height: 40px;
        }
        .select-card-wrapper {
            margin-top: 7px;
        }
    }
    & .borrowing-block-container {
        margin-top: 20px;
    }
}
.record-holdings-url-table {
    margin: 20px 0px;
    border: 1px solid @record-holdings-border-color;
    border-top: none;
    @media print {
        border-top: 1px solid @record-holdings-border-color;
    }
    & .headers {
        display: flex;
        width: 100%;
        padding: 0 15px;
        background: @record-holdings-title-background;
        color: @record-holdings-title-color;
        vertical-align: middle;
    }
    .holdings-urls {
        display: block;
        padding: 10px 15px;
    }
    .holdings-url-link {
        display: block;
    }
    & .holdings-url-title {
        .h4;
        font-weight: 500;
        margin-top: 15px;
        margin-bottom: 15px;
        margin-right: 15px;
        display: inline-block;
    }
}
.record-holdings-table {
    margin: 20px 0px;
    border: 1px solid @record-holdings-border-color;
    border-top: none;
    @media print {
        border-top: 1px solid @record-holdings-border-color;
    }
    h5{
        padding-left: 15px;
    }
    .holdings-container-heading {
        &:hover {
            cursor: pointer;
        }
        & .location {
            width: 50%;
            float: left;
            padding-left: 15px;
            padding-right: 15px;
            font-weight: bold;
            font-size: .92em;
            text-transform: uppercase;
            & > i {
                margin-left: -11px;
            }
            @media (max-width: @screen-xs-max) {
                font-size: .87em;
            }
        }
        & .location, .holdings-details, .location-link {
            padding-top: 10px;
            @media (min-width: @screen-sm-min) {
                padding-bottom: 10px;
            }
            padding-bottom: 5px;
            border-top: 2px solid @record-holdings-border-color;
            vertical-align: middle;
            @media print {
                border-top: 1px solid @record-holdings-border-color;
            }
        }
        & .holdings-details {
            padding-right: 15px;
            font-weight: bold;
            width: 25%;
            float: left;
            .clearfix();
            @media (max-width: @screen-xs-max) {
                width: 50%;
                text-align: right;
                line-height: 1.3;
            }
            .small {
                font-weight: normal;
                color: @gray;
            }
        }
        & .holdings-details, .location {
            @media (max-width: @screen-xs-max) {
                padding-bottom: 0px;
            }
        }
        & .location-link {
            width: 25%;
            float: left;
            font-weight: bold;
            padding-right: 15px;
            @media (max-width: @screen-xs-max) {
                width: 100%;
                text-align: right;
                border-top: none;
                padding-top: 0px;
                padding-bottom: 0px;
                line-height: 1.3;
            }
        }
        & .holdings-extra-text {
            padding: 4px;
        }
    }
    & .row:nth-child(2) {
        & .location, .holdings-details, .location-link {
            border-top: none;
        }
    }

    .copy-title {
        font-weight: bold;
        .department, .callnumber {
            font-weight: normal;
        }
        @media (min-width: @screen-sm-min) {
            width: 50%;
            float: left;
        }
    }
    & .copy-info {
        @media (min-width: @screen-sm-min) {
            width: 50%;
            float: left;
        }
        @media (max-width: @screen-xs-max) {
            line-height: 1.3;
        }
    }
    & .copy-available {
        @media (min-width: @screen-sm-min) {
            float: right;
            & div {
                margin-left: -15px;
            }
        }
    }
    & .copy-details {
        .clearfix();
        padding: 8px 15px;
        &.collapsed {
           display: none;
        }
        &:nth-child(odd):not(.group-heading) {
            background-color: @gray-ultralight;
        }
        &.group-heading {
            font-weight: initial;
            padding-top: 2px;
            padding-bottom: 0;
            text-transform: initial;
        }
        .details-title {
            @media (min-width: @screen-sm) {
                width: 25%;
            }
            width: 50%;
            float: left;
        }
        .details-info {
            @media (min-width: @screen-sm) {
                width: 75%;
            }
            @media (max-width: @screen-xs-max) {
                line-height: 1.3;
            }
            width: 50%;
            float: left;
        }
    }
    & .headers {
        display: flex;
        width: 100%;
        padding: 0 15px;
        background: @record-holdings-title-background;
        color: @record-holdings-title-color;
        vertical-align: middle;
        & .dedup-information {
            flex: 1;
        }
        & .reservations-container {
            flex: 1;
            @media (max-width: @screen-xs-max) {
                text-align: right;
            }
            & .reservations {
                padding-right: 8px;
            }
        }
        & .total-container, .reservations-container {
            margin-top: 14px;
        }
    }
    & .dedup-select {
        max-width: 130px;
        display: inline-block;
        word-wrap: initial;
        margin: 3px 0px 7px;
    }
    & .holdings-title {
        .h4;
        font-weight: 500;
        margin-top: 15px;
        margin-bottom: 15px;
        margin-right: 15px;
        display: inline-block;
    }
    & .btn-primary {
        padding: 2px 6px;
        margin-bottom: 2px;
        @media (max-width: @screen-xs-max) {
            margin-top: 2px;
        }
    }
}
.callnumAndLocation {
    & .collapsed {
        display: none;
    }
    & .holdings-container:not(.root) {
        border-bottom: 1px solid @gray-lighter;
        padding: 2px 0;
        @media (max-width: @screen-xs-max) {
            padding: 6px 0 17px;
        }
    }
    & .holdings-container.root > .header {
        margin-bottom: 3px;
        & .info {
            @media (max-width: @screen-xs-max) {
                float: none;
            }
        }
    }
    & .holdings-container.collapsible > .holdings:not(.root) {
        padding-left: 10px;
    }
    & .holdings-container.collapsible > .header {
        cursor: pointer;
        padding: 1px 0px;
        @media (max-width: @screen-sm-max) {
            padding: 3px 0px;
        }
    }
    & .header {
        margin-bottom: 6px;
        & i {
            vertical-align: middle;
            margin-top: -2px;
        }
        & .info {
            color: lighten(@text-color, 18%);
            float: right;
            margin-top: .5em;
            @media (max-width: @screen-xs-max) {
                display: inline-block;
                margin-left: 15px;
            }
            & .reservations {
                padding-right: 8px;
            }
        }
    }
    & .holdings {
        & .odd {
            background-color: @gray-ultralight;
        }
        & .branchInfo {
            @media (min-width: @screen-sm-min) {
                text-align: right;
            }
            color: @gray-light;
            display: block;
            @media (max-width: @screen-xs-max) {
                margin-left: 20px;
            }
        }
        & .groupCallnumber {
            float: right;
        }
        @media (min-width: @screen-sm) {
            .group-location-col {
                width: 65%;
                float: left;
            }
            .group-branches {
                width: 35%;
                float: left;
            }
        }
    }
    & .holdings-container {
        .holdings {
            & .branch {
                font-weight: 500;
            }
            & .groupLocation i {
                margin-top: -2px
            }
        }
    }
    & .header {
        font-weight: 600;
        & span {
            font-weight: 400;
        }
    }
    & .actions {
        float: right;
        & .title-hold {
            float: right;
            margin-top: 10px;
        }
        & .all-holdings {
            text-align: right;
            clear: both;
            padding-top: 5px;
        }
        @media (max-width: @screen-xs-max) {
            float: none;
            & .all-holdings {
                text-align: left;
            }
        }
    }
    & .fa.arrow {
        color: @gray-light;
    }
}

